# launcher

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  run.bat  vite.config.ts
src/: App.css  App.tsx  ConsoleWindow.tsx  LbConfigsPanel.tsx  SetupWizard.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: console.json  default.json
src-tauri/src/: launcher.rs  lib.rs
